Use compatible bytecode in CGLIB duplicate test