@@ -10,34 +10,24 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 import java.lang.reflect.Method;
 import java.util.Arrays;
-import java.util.List;
+import java.util.Comparator;
 
 import org.junit.jupiter.api.Test;
 import org.springframework.cglib.core.DuplicatesPredicate;
+import org.springframework.core.ExceptionDepthComparator;
 
 /** Verifies duplicate filtering when a generic override contributes a bridge method. */
 public class DuplicatesPredicateTest {
     @Test
     void filtersDuplicateBridgeSignature() throws NoSuchMethodException {
-        Method bridge = Arrays.stream(StringProcessor.class.getDeclaredMethods())
+        Method bridge = Arrays.stream(ExceptionDepthComparator.class.getDeclaredMethods())
                 .filter(Method::isBridge)
                 .findFirst()
                 .orElseThrow(AssertionError::new);
-        Method parentMethod = GenericProcessor.class.getDeclaredMethod("process", Object.class);
-        DuplicatesPredicate predicate = new DuplicatesPredicate(List.of(bridge, parentMethod));
+        Method comparatorMethod = Comparator.class.getMethod("compare", Object.class, Object.class);
+        DuplicatesPredicate predicate = new DuplicatesPredicate(Arrays.asList(bridge, comparatorMethod));
 
         assertThat(predicate.evaluate(bridge)).isTrue();
-        assertThat(predicate.evaluate(parentMethod)).isFalse();
-    }
-
-    public abstract static class GenericProcessor<T> {
-        public abstract T process(T value);
-    }
-
-    public static final class StringProcessor extends GenericProcessor<String> {
-        @Override
-        public String process(String value) {
-            return value.toUpperCase();
-        }
+        assertThat(predicate.evaluate(comparatorMethod)).isFalse();
     }
 }
